--- a/task6/index.html
+++ b/task6/index.html
@@ -106,11 +106,11 @@
 		    			    <span style="font-size: 12px;line-height: 6px;">hello world hello world hello world</span></div>
 		    		    </div>
 		    		    <div class="bottomFinRight">
-		    		    	<span class="contentFin">
-		    		    		<span class="yinhao">"</span>
-		    		    		hello world hello world hello world hello world hello world hello world hello world
-		    		    		<span class="yinhao">"</span>
-		    		    	</span>		    		    		
+		    		    	<p class="contentFin">
+		    		    		<span class="yinhao1">"</span>
+		    		    		hello world hello world hello world hello world hello world hello world
+		    		    		<span class="yinhao2">"</span>
+		    		    	</p>		    		    		
 		    		    </div>
 		    		    </div>
 		    		</div>
